fixed menu bar alignment using flex

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,46 @@
-.header  {
-  font-family: monospace;
-  background: papayawhip;
+.header {
+    font-family: monospace;
+    background: papayawhip;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo {
-  font-size: 48px;
-  font-weight: 900;
-  color: tomato;
-  background: white;
-  padding: 4px 32px;
+    font-size: 48px;
+    font-weight: 900;
+    color: tomato;
+    background: white;
+    padding: 4px 32px;
+    margin: 8px;
 }
 
 ul {
-  /* this removes the dots on the list items*/
-  list-style-type: none;
+    /* this removes the dots on the list items*/
+    list-style-type: none;
+    display: flex;
+    gap: 8px;
+    margin: 8px;
+    padding: 0px;
 }
 
 a {
-  font-size: 22px;
-  background: white;
-  padding: 8px;
-  /* this removes the line under the links */
-  text-decoration: none;
+    font-size: 22px;
+    background: white;
+    padding: 8px;
+    /* this removes the line under the links */
+    text-decoration: none;
+}
+
+.left-links {
+    display: flex;
+    justify-content: flex-start;
+    flex: 1;
+}
+
+.right-links {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1;
 }
